# aula15_bootcamp

./: main.py  pyproject.toml  start.py
contracts/: schema.py
data/: products.csv
datasource/: api.py
tools/: retry.py
tools/aws/: client.py
