[tool.poetry]
name = "aula15-bootcamp"
version = "0.1.0"
description = ""
authors = ["sch-paulo <pschmitzjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastapi = "^0.115.6"
faker = "^33.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
